[package]
name = "huffman"
version = "0.1.0"
authors = ["Eduardo Sandalo Porto <30930225+edusporto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.16"
clap = "2.33"
rayon = "1.3"
num_cpus = "1.11"